dvwa/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa-mariadb
  namespace: dvwa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa-mariadb
  template:
    metadata:
      labels:
        app: dvwa-mariadb
    spec:
      containers:
        - name: dvwa
          image: ghcr.io/digininja/dvwa:latest
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 8081
              name: http
        - name: mariadb
          image: docker.io/library/mariadb:10
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 3306
              name: mysql
