dvwa/Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvwa
  namespace: dvwa
  annotations: {
    fortiweb-ip: "10.0.0.4",
    fortiweb-login: "fortiweb-login-secret",
    fortiweb-port: "8443",
    fortiweb-ctrl-log: "disable",
    health-check-ctrl: "HLTHCK_HTTP",
    virtual-server-ip: "10.0.0.7",
    virtual-server-addr-type: "ipv4",
    virtual-server-interface: "port1",
    server-policy-https-service: "HTTPS",
    server-policy-http-service: "HTTP",
    server-policy-syn-cookie: "enable",
    server-policy-http-to-https: "disable"
  }
spec:
  ingressClassName: fwb-ingress-controller
  defaultBackend:
    service:
      name: dvwa
      port:
        number: 8081
